--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -20,9 +23,12 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^7.0.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.0",
-    "vite": "^5.4.10",
+    "vite": "^5.4.11",
     "vue-tsc": "^2.1.6"
   }
 }
